--- a/css/historyTabs.css
+++ b/css/historyTabs.css
@@ -2,11 +2,15 @@
     text-decoration: none;
     color: #359CC6;
     margin: 0 10px;
+    width: 100%;
+}
+
+.tab_favicon a {
+    margin: 0;
 }
 
 .tab a:hover {
     color: #E88F00;
-    border-bottom: 1px dotted #9F1D35;
 }
 
 img {
@@ -17,15 +21,17 @@ img {
 
 .tab {
     display: inline-block;
-    background: #fff;
-    padding: 1em;
+    background: #f5f5f5;
+    padding: 2em;
     margin: 0 1% 1%;
     width: 23%;
-    height: 65%;
+    height: 55%;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-shadow: 2px 2px 4px 0 #ccc;
+    border-radius: 5px;
+    text-decoration: none;
 }
 
 .tabs {
@@ -40,7 +46,7 @@ img {
     justify-content: center;
 }
 
-.tab_favicon {
+.tab_favicon a {
     display: flex;
     justify-content: center;
 }
@@ -48,5 +54,16 @@ img {
 .tab_name {
     display: flex;
     justify-content: center;
-    margin-top: 17%;
+    margin-top: 15%;
+}
+
+[draggable] {
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+}
+
+.tab.over {
+    background: #dcdcdc;
 }
